feat: Swagger doc - Conselho e reino
